--- a/gestiondocente/src/main/resources/log4j.properties
+++ b/gestiondocente/src/main/resources/log4j.properties
@@ -15,9 +15,8 @@ log4j.appender.PANTALLA = org.apache.log4j.ConsoleAppender
 log4j.appender.PANTALLA.layout = org.apache.log4j.PatternLayout
 log4j.appender.PANTALLA.layout.ConversionPattern = %d(yyyy-MM-dd HH:mm:ss , SSS} %-4r %-5p [%t] %c %x %M -%m%n
 
-#FICHERO a trazas
-
+#FICHERO de trazas
 log4j.appender.FICHERO = org.apache.log4j.FileAppender
 log4j.appender.FICHERO.File = ${catalina.home}/logs/gestiondocente/trazas.log
-log4j.appender.FICHERO.layout =  org.apache.log4j.PatterLayout
-log4j.appender.FICHERO.layout.ConversionPattern = %d(yyyy-MM-dd HH:mm:ss , SSS} %-4r %-5p [%t] %c %x %C{1} %M -%m%n
+log4j.appender.FICHERO.layout = org.apache.log4j.PatternLayout
+log4j.appender.FICHERO.layout.ConversionPattern =  %d{yyyy-MM-dd HH:mm:ss,SSS} %-4r %-5p [%t] %c %x %C{1} %M - %m%n
