--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -89,4 +89,7 @@
   <listener>
     <listener-class>com.ipartek.formacion.controller.listeners.InitListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.ipartek.formacion.controller.listeners.SessionListener</listener-class>
+  </listener>
 </web-app>
