--- a/gestiondocente/pom.xml
+++ b/gestiondocente/pom.xml
@@ -10,6 +10,7 @@
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jstl.version>1.2</jstl.version>
+		<log4j.version>1.2.17</log4j.version>
   </properties>
   <dependencies>
           <!-- Servlet -->
@@ -30,6 +31,13 @@
     <artifactId>jstl</artifactId>
     <version>${jstl.version}</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>${log4j.version}</version>
+</dependency>
+
         
  </dependencies>
 <build>
