--- a/gestiondocente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocente/src/main/webapp/WEB-INF/web.xml
@@ -83,4 +83,15 @@
   <listener>
     <listener-class>com.ipartek.formacion.controller.listeners.SessionListerner</listener-class>
   </listener>
+  
+  <servlet>
+    <description></description>
+    <display-name>UsuarioServlet</display-name>
+    <servlet-name>UsuarioServlet</servlet-name>
+    <servlet-class>com.ipartek.formacion.controller.UsuarioServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UsuarioServlet</servlet-name>
+    <url-pattern>/usuario.do</url-pattern>
+  </servlet-mapping>
 </web-app>
